;;
;; Ralph package
;;
[metadata]
name = lbt
version = 1.0.0
description = The Learning Record Store Benchmarking Tool
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://openfun.github.io/lbt/
license = MIT
keywords = Open edX, Analytics, xAPI, LRS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
    langcodes>=3.2.0
    locust>=2.14.2
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    black==22.12.0
    flake8==6.0.0
    isort==5.11.4
    pydocstyle==6.3.0
    pylint==2.15.10

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[pydocstyle]
convention = google
match_dir = ^(?!tests|venv|build|scripts).*
match = ^(?!(setup)\.(py)$).*\.(py)$

[isort]
known_lbt=lbt
sections=FUTURE,STDLIB,THIRDPARTY,LBT,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black